--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,3 +1,4 @@
+
 # Node.js
 # Build a general Node.js project with npm.
 # Add steps that analyze code, save build artifacts, deploy, and more:
@@ -25,6 +26,7 @@ steps:
      command: 'install'
 
 - script: |
+    npx mocha
     npm install --only=dev
     npm run build
     npm install -g @angular/cli
